블로그 만들기 수정

--- a/_posts/2022-05-01-blog1.md
+++ b/_posts/2022-05-01-blog1.md
@@ -1,2 +1,14 @@
 ---
-#블로그 첫 포스팅입니다. 
+#블로그 만들기.
+
+1. Github 에서 블로그 용으로 쓸 새로운 Repository 를 생성한다.Permalink
+
+2. 생성한 Repository를 Local 환경으로 Clone 해 온다.
+
+3. Ruby 설치
+
+4. Jekyll 과 Bundler 설치Permalink
+
+5. jekyll 테마를 내 블로그 레포지토리 Local 폴더에 다운받는다.
+
+6. Github Pages 서버와 연결해주기
